--- a/frontend/src/app/main/pages/detail-etudiant/detail-etudiant.component.html
+++ b/frontend/src/app/main/pages/detail-etudiant/detail-etudiant.component.html
@@ -78,7 +78,7 @@
 
 
     <!--  boutons action-->
-    <div    *ngIf="currentUser.role == 'ROLE_ETUDIANT' ">
+    <div    *ngIf="currentUser.role == 'ROLE_ADMIN' ">
     <div class="col-md-2 mb-1 mt-1 ">
         <div class="row">
             <div class="col-md-4">
