--- a/frontend/src/app/main/pages/classe/nouveau-classe/nouveau-classe.component.html
+++ b/frontend/src/app/main/pages/classe/nouveau-classe/nouveau-classe.component.html
@@ -30,17 +30,46 @@
 
           <div class="row mb-3">
             <div class="col">
-              <input type="text" class="form-control" name="nomclasse" placeholder="nom de la classe"
+              <input type="text" class="form-control" placeholder="class name"
+                     required
+                     id="nam"
+                     ngModel
+                     name="inputName"
+                     #inputName="ngModel"
+                     [class.error]="!inputName.valid"
+                     type="text"
+                     pattern="[A-Za-z]{1,32}"
                 [(ngModel)]="classeDto.nomClasse">
 
+
             </div>
+            <ngb-alert [type]="'danger'" *ngIf="!inputName.valid" class="mt-lg-0" [dismissible]="false">
+              <div class="alert-body" >
+                <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
+                <small>Enter<strong> valid name</strong></small>
+              </div>
+            </ngb-alert>
           </div>
           <div class="row mb-3">
             <div class="col">
-              <input type="text" class="form-control" name="specialite" placeholder="specialite"
+              <input type="text" class="form-control"  placeholder="Speciality"
+                     required
+                     id="nadm"
+                     ngModel
+                     name="inputSpec"
+                     #inputSpec="ngModel"
+                     [class.error]="!inputSpec.valid"
+                     type="text"
+                     pattern="[A-Za-z]{1,32}"
                 [(ngModel)]="classeDto.specialite">
 
             </div>
+            <ngb-alert [type]="'danger'" *ngIf="!inputSpec.valid" class="mt-lg-0" [dismissible]="false">
+              <div class="alert-body" >
+                <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
+                <small>Enter<strong> valid speciality</strong></small>
+              </div>
+            </ngb-alert>
           </div>
         </form>
       </div>
