--- a/frontend/src/app/main/pages/etudiant/nouveau-etudiant/nouveau-etudiant/nouveau-etudiant.component.html
+++ b/frontend/src/app/main/pages/etudiant/nouveau-etudiant/nouveau-etudiant/nouveau-etudiant.component.html
@@ -29,7 +29,7 @@
                       [(ngModel)]="etudiantDto.nom"
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputName.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputName.valid && inputName.touched " class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid name</strong></small>
@@ -52,7 +52,7 @@
 
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputPrenom.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputPrenom.valid && inputPrenom.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid firstname</strong></small>
@@ -71,9 +71,9 @@
               #inputDate="ngModel"
               [class.error]="!inputDate.valid"
               type="text"
-              pattern="\d{1,2}-\d{1,2}-\d{4}"
+              pattern="\d{1,2,4}-\d{1,2}-\d{4,2}"
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputDate.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputDate.valid && inputDate.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid Date</strong></small>
@@ -97,7 +97,7 @@
 
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputEmail.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputEmail.valid && inputEmail.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid email</strong></small>
@@ -119,12 +119,12 @@
 
               >
 
-                <option [value]="null"  >Select Class</option>
+
                 <!--  <option *ngFor="let cat of listeCategorie" [value]="cat.id">{{ cat.code }} - {{ cat.designation }}</option> -->
                 <option *ngFor="let class of listeClasse" [value]="class.id" > {{ class.nomClasse }}</option>
               </select>
               <div>
-                <ngb-alert [type]="'danger'" *ngIf="!class.valid" class="mt-lg-0" [dismissible]="false">
+                <ngb-alert [type]="'danger'" *ngIf="class.value==null " class="mt-lg-0" [dismissible]="false">
                   <div class="alert-body" >
                     <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                     <small>Enter<strong> valid Classe</strong></small>
@@ -158,12 +158,12 @@
                      ngModel
                      name="inputAdresse1"
                      #inputAdresse1="ngModel"
-                     [class.error]="!inputAdresse1.valid"
+                     [class.error]="!inputAdresse1.valid "
                      type="text"
                      pattern="[A-Za-z]{1,32}"
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputAdresse1.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputAdresse1.valid && inputAdresse1.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid Adresse 1</strong></small>
@@ -186,7 +186,7 @@
                      pattern="[A-Za-z]{1,32}"
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputAdresse2.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputAdresse2.valid  && inputAdresse2.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid Adresse 2</strong></small>
@@ -207,7 +207,7 @@
                      type="text"
                      pattern="[0-9]*"
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputCodepo.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputCodepo.valid  && inputCodepo.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid Code postal</strong></small>
@@ -230,7 +230,7 @@
 
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputPays.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputPays.valid && inputPays.touched" class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid Pays</strong></small>
@@ -256,7 +256,7 @@
 
 
               >
-              <ngb-alert [type]="'danger'" *ngIf="!inputVille.valid" class="mt-lg-0" [dismissible]="false">
+              <ngb-alert [type]="'danger'" *ngIf="!inputVille.valid && inputVille.touched " class="mt-lg-0" [dismissible]="false">
                 <div class="alert-body" >
                   <span [data-feather]="'info'" [class]="'mr-50 align-middle'"></span>
                   <small>Enter<strong> valid Vile</strong></small>
@@ -299,7 +299,17 @@
         CANCEL
       </button>
       <!--<button class="btn btn-primary" (click)="enregistrerArticle()"> -->
-      <button class="btn btn-outline-primary round" (click)="enregistrerEtudiant()">
+      <button class="btn btn-outline-primary round" (click)="enregistrerEtudiant() "
+              required
+              id="btnSubmit"
+              ngModel
+              name="btnSubmit"
+              #btnSubmit="ngModel"
+              [class.error]="!btnSubmit.touched"
+              type="button"
+
+
+      >
 
         <i class="fas fa-save"></i>&nbsp;
         SAVE
